--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/main.scss" />
-    
-  </head>
-  <body>
 
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Search images</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+    crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+</head>
+
+<body>
   <div class="search-container">
     <form class="search-form" id="search-form">
       <input type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
@@ -17,20 +20,14 @@
       </button>
     </form>
   </div>
-  
-  <!-- <form>
-      <input type="text" placeholder="Искать здесь...">
-      <button type="submit"></button>
-    </form> -->
-  
+
   <div class="gallery-container">
     <div class="gallery"></div>
     <button type="button" class="btn-load-more is-hidden">Load more</button>
     <a class="btn-to-top" title="Return to top">
       <span class="material-icons">arrow_upward</span></a>
   </div>
-  
   <script src="./index.js" type="module"></script>
+</body>
 
-  </body>
 </html>
